# cygnet

./: .gitignore  CNAME  README.md  REPORT.md  build.sh  cygnet.xsd  index.html  pyproject.toml  relations.xml  run.sh  wordnets.toml
.github/workflows/: pages.yml  release.yml
conversion_scripts/: 10_sqlite_conversion.py  1_extract_cili.py  2_batch_convert_lmfs.py  3_extract_glosstag.py  4_add_glosstag_to_cili.py  5_translate_defns.py  6_synthesise.py  7_validate_and_export.py  8_compress.py  8_website_conversion.py  9_lang_codes.py  SCHEMA.html  SCHEMA.md  schema.mmd
cyg/: converters.py  merge.py
notes/: api-demo.md
omw_conversion/: 1_batch_convert.py  2_synthesise.py  3_clean.py  4_validity_checker.py  5_website_conversion.py  6_lang_codes.py  convert_wn_to_xml.py
scripts/: compare.py  latex_utils.py  make_table_wordnets.py  report.py
tests/: conftest.py  fingerprint.py  test_conflict_detection.py  test_example_matching.py  test_pipeline.py  test_provenance.py  test_report.py  test_resources.py  test_ui.py
tests/wordnets/: wn-bad.xml  wn-en.xml  wn-fr.xml
web/: index.html
website_data/: lang_codes.json  prefix_map.json
website_data/concepts/000/: 00000.json  00001.json  00002.json  00003.json  00004.json  00005.json  00006.json  00007.json  00008.json  00009.json  00010.json  00011.json  00012.json  00013.json  00014.json  00015.json  00016.json  00017.json  00018.json  00019.json  00020.json  00021.json  00022.json  00023.json  00024.json  00025.json  00026.json  00027.json  00028.json  00029.json  00030.json  00031.json  00032.json  00033.json  00034.json  (+65 more)
website_data/prefix_lookups/: 0000.json  0001.json  0002.json  0003.json  0004.json  0005.json  0006.json  0007.json  0008.json  0009.json  0010.json  0011.json  0012.json  0013.json  0014.json  0015.json  0016.json  0017.json  0018.json  0019.json  0020.json  0021.json  0022.json  0023.json  0024.json  0025.json  0026.json  0027.json  0028.json  0029.json  0030.json  0031.json  0032.json  0033.json  0034.json  0035.json  0036.json  0037.json  0038.json  0039.json  (+615 more)
(+22953 files in other folders)
