[project]
name = "cygnet"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "lxml",
    "spacy",
    "nltk",
    "pyinflect",
    "langcodes[data]",
]

[project.optional-dependencies]
glosstag = ["simple-colors"]
translate = ["argostranslate"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cyg"]
